<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Admin Dashboard/Home Tab -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_admin_dashboard" />

    <!-- User Management Tab -->
    <item
        android:id="@+id/navigation_user_management"
        android:icon="@drawable/ic_user_management_black_24dp"
        android:title="@string/title_user_management" />

    <!-- Event Management Tab -->
    <item
        android:id="@+id/navigation_event_management"
        android:icon="@drawable/ic_event_management_black_24dp"
        android:title="@string/title_event_management" />

    <!-- Reports Tab -->
    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports_black_24dp"
        android:title="@string/title_reports" />

    <!-- Notifications Tab -->
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
