<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.planmate.user.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Calendar Fragment -->
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.planmate.user.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <!-- Tasks Fragment -->
    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.planmate.user.ui.event.EventFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_event" />

    <!-- Notifications Fragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.planmate.user.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
